fixed brazil image not visible

--- a/src/countries/Brazil.css
+++ b/src/countries/Brazil.css
@@ -74,7 +74,7 @@
   height: 100vh;
 }
 .brazil-image6 {
-  background-image: url("https://media.gettyimages.com/photos/pateo-do-colegio-in-downtown-sao-paulo-sao-paulo-brazil-picture-id901625132?b=1&k=6&m=901625132&s=170667a&w=0&h=g3N-Te7leLtNPZNo7l9kmxB7kx4BrJ0Uap9uDNwA3yA=");
+  background-image: url("https://www.wheretraveler.com/sites/default/files/images/patio_do_colegio_sp-c_alffoto_-istock.jpg");
   width: 500vh;
   height: 100vh;
 }
